--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 Simphony-Numerrin CHANGELOG
 ======================
 
+Release 0.1.1
+-------------
+
+* Use latest version of of simphony-common (>=0.2.0) (#8)
+
 Release 0.1.0
 -------------
 
